testsuite/poke.pkl/optcond-1-diag.pk
/* { dg-do compile } */

type Foo = struct { int i if "bar"; }; /* { dg-error "expected boolean" } */
